syntax = "proto3";

package app;

service TitleController {
  rpc createTitle (createTitleDto) returns (TitleResponse) {}
}

message createTitleDto {
  string name = 1;
  int32 number = 2;
}

message TitleResponse {
  string name = 1;
  int32 number = 2;
  int32 id = 3;
  string error = 4;
}

service QuestionController {
  rpc createQuestion (createQuestionDto) returns (QuestionResponse) {}
}

message createQuestionDto {
  string content = 1;
}

message QuestionResponse {
  string content = 1;
  int32 id = 2;
}





